[package]
name = "telegram-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.2"
env_logger = "0.9"
fuser = "0.11"
grammers-client = "0.4"
grammers-session = "0.4"
libc = "0.2"
log = "0.4"
lru = "0.8"
nix = "0.18"
sd-notify = "0.4"
static_assertions = "1.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }