[package]
name = "telegram-fuse"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
env_logger = "0.9.1"
fuser = "0.11.1"
grammers-client = "0.4.0"
grammers-session = "0.4.0"
libc = "0.2.137"
log = "0.4.17"
lru = "0.8.1"
sd-notify = "0.4.1"
static_assertions = "1.1.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }